Doc: QLatin1StringView documentation misses string literals namespace

QLatin1StringView documentation assumes knowledge of string literals
namespace. This commit adds a 'using' statement to the code samplles
that use string literals.

Fixes: QTBUG-135945
Change-Id: I17971d343d9dad132394b91d93ac045c2c8d019f
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 72becc7c124f27ad1506ed4fc49d9abe1242629b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 78f9131efe9bb79d25f0f2f5a2deb548bf7bc8ba)