src/corelib/doc/snippets/code/src_corelib_io_qabstractfileengine.cpp
@@ -1,9 +1,9 @@
 // Copyright (C) 2016 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
 
-using namespace Qt::StringLiterals;
-
 //! [0]
+using namespace Qt::StringLiterals;
+// ...
 class ZipEngineHandler : public QAbstractFileEngineHandler
 {
 public:
