src/corelib/doc/snippets/hellotrmain.cpp
@@ -1,9 +1,10 @@
 // Copyright (C) 2016 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
 
+//! [0]
+// Required for using the '_L1' string literal.
 using namespace Qt::StringLiterals;
 
-//! [0]
 int main(int argc, char *argv[])
 {
     QApplication app(argc, argv);
